--- a/ischolar_api/package.json
+++ b/ischolar_api/package.json
@@ -1,12 +1,12 @@
 {
   "name": "ischolar_api",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "ischolar",
+  "author": "",
   "license": "ISC",
   "description": ""
 }
